k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cognitive-deck
  labels:
    name: cognitive-deck
